# egui_node_graph

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
egui_node_graph/: Cargo.toml
egui_node_graph/examples/: bevy.rs  eframe.rs  node_graph.rs
egui_node_graph/src/: color_hex_utils.rs  column_node.rs  editor_ui.rs  error.rs  graph.rs  graph_impls.rs  id_type.rs  index_impls.rs  lib.rs  node_finder.rs  scale.rs  traits.rs  ui_state.rs  utils.rs  vertical_port.rs
egui_node_graph_example/: Cargo.toml  README.md  index.html
egui_node_graph_example/assets/: manifest.json  sw.js
egui_node_graph_example/src/: app.rs  lib.rs  main.rs
src/: graph_impls.rs  index_impls.rs  lib.rs  node_finder.rs  ui_state.rs
