[package]
name = "egui_node_graph_example"
version = "0.1.0"
authors = ["setzer22"]
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { git = "https://github.com/emilk/egui", rev = "3a8e2348a5d18262a714ccfbcba115176848475c" }
egui_node_graph = { path = "../egui_node_graph" }
anyhow = "1.0"
serde = { version = "1.0", optional = true }

[features]
default = []
persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]

[profile.release]
opt-level = 2 # fast and small wasm
