[package]
name = "egui_node_graph_example"
version = "0.1.0"
authors = ["setzer22"]
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ecolor = "*"
eframe = "0.23.0"
egui_node_graph = { path = "../egui_node_graph" }
anyhow = "1.0"
serde = { version = "1.0", optional = true }

[features]
default = []
persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]

[profile.release]
opt-level = 2 # fast and small wasm
